Fix: source links too wide

--- a/styles/app.css
+++ b/styles/app.css
@@ -1149,6 +1149,7 @@ remiscan-logo {
   color: var(--accent-color);
   align-items: center;
   display: inline-flex;
+  width: fit-content;
 }
 
 @media (any-pointer: coarse) {
